# xdrawchem

./: .gitignore  CHANGELOG.md  README.md  VERSION  backlog.md  index.html  io.github.bryanherger.xdrawchem.yml  org.xdrawchem.XDrawChem.yml
.github/workflows/: build-deb.yml  build-flatpak.yml  build-mac.yml  build-rpm.yml  build-windows.yml  ci.yml  release.yml
xdrawchem/: CHANGELOG.md  CMakeLists.txt  NOTES.md  PACKAGING.md  README.md  xdrawchem.desktop  xdrawchem.metainfo.xml
xdrawchem-qt5/: CMakeLists.txt  PACKAGING.md  README.md  xdrawchem.metainfo.xml
xdrawchem-qt5/SPECS/: xdrawchem.spec
xdrawchem-qt5/debian/: changelog  control  xdrawchem.install
xdrawchem-qt5/flatpak/: org.xdrawchem.xdrawchem.yml
xdrawchem-qt5/tests/: CMakeLists.txt  tst_aromaticity.cpp  tst_iupac_pubchem.cpp
xdrawchem-qt5/translation/: xdrawchem_da.ts  xdrawchem_de.ts  xdrawchem_dk.ts  xdrawchem_en.ts  xdrawchem_fr.ts  xdrawchem_it.ts  xdrawchem_ka.ts  xdrawchem_nl.ts  xdrawchem_pl.ts  xdrawchem_pt.ts
xdrawchem-qt5/xdrawchem/: aa_xpm.h  application.cpp  application.h  application_ob.cpp  application_ring.cpp  arrows.h  charsel.cpp  chemdata.cpp  chemdata.h  chemdata_edit.cpp  chemdata_rw.cpp  chemdata_tools.cpp  defs.h  defs.h.in  helpwindow.cpp  ioiface.cpp  main.cpp  molecule.h  molecule_iupac.cpp  molecule_nts.cpp  molecule_nts.h  molecule_obmol.cpp  molecule_smarts.cpp  netaccess.cpp  netdialog.cpp  ob_compat.h  propertypanel.h  render2d.cpp  render2d.h  render2d_draw.cpp  render2d_event.cpp  render2d_svg.cpp  render2d_text.cpp  to3d.cpp  tool_2d3d.cpp
xdrawchem/SPECS/: xdrawchem.spec
xdrawchem/debian/: changelog  copyright  rules  watch  xdrawchem.install
xdrawchem/flatpak/: org.xdrawchem.xdrawchem.yml
xdrawchem/tests/: CMakeLists.txt  globals_stub.cpp  render2d_stub.cpp  tst_bond_enthalpy.cpp  tst_bondgeometry.cpp  tst_cmlparser.cpp  tst_dpoint.cpp  tst_drawing_styles.cpp  tst_iupac_pubchem.cpp  tst_moldata.cpp  tst_smiles.cpp  tst_sssr.cpp  tst_valence.cpp  tst_vector2d.cpp  tst_xml_reader.cpp
xdrawchem/translation/: xdrawchem_da.ts  xdrawchem_en.ts  xdrawchem_fr.ts  xdrawchem_it.ts  xdrawchem_jp.ts  xdrawchem_nl.ts  xdrawchem_pl.ts  xdrawchem_pt.ts
xdrawchem/xdrawchem/: CDXConstants.h  application.cpp  application.h  application_ob.cpp  application_ring.cpp  arrow.cpp  arrow.h  biotools.h  bond.cpp  bond.h  bondedit.cpp  boshcp.cpp  boshcp.h  bracket.cpp  bracket.h  cdx2cdxml.cpp  cdxml_reader.cpp  chemdata.cpp  chemdata.h  chemdata_cdx.cpp  chemdata_cml.cpp  chemdata_event.cpp  chemdata_mdl.cpp  chemdata_rxn.cpp  chemdata_xdc.cpp  colorbutton.cpp  colorbutton.h  crings_dialog.cpp  crings_dialog.h  curvearrow.h  defs.h.in  dpoint.h  drawable.cpp  drawable.h  dyk.cpp  dyk.h  fixeddialog.cpp  gobject.cpp  gobject.h  graphdialog.cpp  (+71 more)
